--- a/django/contrib/auth/locale/ru/LC_MESSAGES/django.po
+++ b/django/contrib/auth/locale/ru/LC_MESSAGES/django.po
@@ -260,7 +260,7 @@ msgstr[3] "Ваш пароль должен содержать как миним
 msgid "The password is too similar to the %(verbose_name)s."
 msgstr "Введённый пароль слишком похож на %(verbose_name)s."
 
-msgid "Your password can't be too similar to your other personal information."
+msgid "Your password can’t be too similar to your other personal information."
 msgstr ""
 "Ваш пароль не должен совпадать с вашим именем или другой персональной "
 "информацией или быть слишком похожим на неё."
@@ -268,13 +268,13 @@ msgstr ""
 msgid "This password is too common."
 msgstr "Введённый пароль слишком широко распространён."
 
-msgid "Your password can't be a commonly used password."
+msgid "Your password can’t be a commonly used password."
 msgstr "Ваш пароль не может быть одним из широко распространённых паролей."
 
 msgid "This password is entirely numeric."
 msgstr "Введённый пароль состоит только из цифр."
 
-msgid "Your password can't be entirely numeric."
+msgid "Your password can’t be entirely numeric."
 msgstr "Ваш пароль не может состоять только из цифр."
 
 #, python-format
