Added name to authors

--- a/AUTHORS
+++ b/AUTHORS
@@ -319,6 +319,7 @@ answer newbie questions, and generally made Django that much better:
     Gabriel Grant <g@briel.ca>
     Gabriel Hurley <gabriel@strikeawe.com>
     gandalf@owca.info
+    Garrett Edel <edelgm6@gmail.com>
     Garry Lawrence
     Garry Polley <garrympolley@gmail.com>
     Garth Kidd <http://www.deadlybloodyserious.com/>
