Add note about using python3 command for Django installation

--- a/docs/intro/install.txt
+++ b/docs/intro/install.txt
@@ -77,6 +77,8 @@ Then at the Python prompt, try to import Django:
     |version|
 
 You may have another version of Django installed.
+.. note::
+   If ``python`` doesn't work on your system, try using ``python3`` instead.
 
 That's it!
 ==========
