Fixed #36629 -- Added "Choose all" and "Remove all" button in the admin m2m widget filter_vertical.
Co-authored-by: Md. Miftahul Kabir <miftahul1999530@gmail.com>

--- a/AUTHORS
+++ b/AUTHORS
@@ -801,6 +801,7 @@ answer newbie questions, and generally made Django that much better:
     Nicolas Noé <nicolas@niconoe.eu>
     Nikita Marchant <nikita.marchant@gmail.com>
     Nikita Sobolev <mail@sobolevn.me>
+    Nilesh Kumar Pahari <nileshpahari@protonmail.com>
     Nina Menezes <https://github.com/nmenezes0>
     Niran Babalola <niran@niran.org>
     Nis Jørgensen <nis@superlativ.dk>
