Updated Urdu translations

--- a/AUTHORS
+++ b/AUTHORS
@@ -459,6 +459,7 @@ answer newbie questions, and generally made Django that much better:
     Iuri de Silvio <https://github.com/iurisilvio>
     ivan.chelubeev@gmail.com
     Ivan Sagalaev (Maniac) <http://www.softwaremaniacs.org/>
+    Izan Majeed <izan-majeed.github.io>
     Jaap Roes <jaap.roes@gmail.com>
     Jack Moffitt <https://metajack.im/>
     Jacob Burch <jacobburch@gmail.com>
