--- a/AUTHORS
+++ b/AUTHORS
@@ -70,6 +70,7 @@ answer newbie questions, and generally made Django that much better:
     Aljosa Mohorovic <aljosa.mohorovic@gmail.com>
     Alokik Vijay <alokik.roe@gmail.com>
     Amir Karimi <https://github.com/amk9978>
+    Amirreza Sohrabi Far <https://github.com/amirreza8002>
     Amit Chakradeo <https://amit.chakradeo.net/>
     Amit Ramon <amit.ramon@gmail.com>
     Amit Upadhyay <http://www.amitu.com/blog/>
