Fixed #35875 -- Added dark mode support to technical 404 and 500 error views.

--- a/AUTHORS
+++ b/AUTHORS
@@ -426,6 +426,7 @@ answer newbie questions, and generally made Django that much better:
     Hannes Struß <x@hannesstruss.de>
     Hao Dong <https://github.com/RelaxedDong>
     Harm Geerts <hgeerts@gmail.com>
+    Harvey Bellini <harveybellini@gmail.com>
     Hasan Ramezani <hasan.r67@gmail.com>
     Hawkeye
     Helen Sherwood-Taylor <helen@rrdlabs.co.uk>
