Docs: clarify Python version compatibility during installation

--- a/docs/intro/install.txt
+++ b/docs/intro/install.txt
@@ -19,6 +19,10 @@ database called SQLite_ so you won't need to set up a database just yet.
 Get the latest version of Python at https://www.python.org/downloads/ or with
 your operating system's package manager.
 
+When choosing a Python version, ensure it is supported by the Django version
+you plan to use; see :ref:`faq-python-version-support` for details.
+
+
 You can verify that Python is installed by typing ``python`` from your shell;
 you should see something like:
 
