--- a/AUTHORS
+++ b/AUTHORS
@@ -430,6 +430,7 @@ answer newbie questions, and generally made Django that much better:
     Hasan Ramezani <hasan.r67@gmail.com>
     Hawkeye
     Helen Sherwood-Taylor <helen@rrdlabs.co.uk>
+    Hendrik Richter <info@prokapi.com>
     Henrique Romano <onaiort@gmail.com>
     Henry Dang <henrydangprg@gmail.com>
     Hidde Bultsma
