--- a/AUTHORS
+++ b/AUTHORS
@@ -864,6 +864,7 @@ answer newbie questions, and generally made Django that much better:
     plisk
     polpak@yahoo.com
     pradeep.gowda@gmail.com
+    Praful Gulani <https://github.com/prafulgulani>
     Prashant Pandey <https://prashantpandey9.in>
     Preston Holmes <preston@ptone.com>
     Preston Timmons <prestontimmons@gmail.com>
