Fixed #36920 -- Fixed alignment of fieldset legends in wide admin forms.
Visual regression in 4187da258fe212d494cb578a0bc2b52c4979ab95.

--- a/AUTHORS
+++ b/AUTHORS
@@ -775,6 +775,7 @@ answer newbie questions, and generally made Django that much better:
     Mridul Dhall <mriduldhall1@gmail.com>
     msaelices <msaelices@gmail.com>
     msundstr
+    Muhammad Usman <muhammad.usman11914@gmail.com>
     Mushtaq Ali <mushtaak@gmail.com>
     Mykola Zamkovoi <nickzam@gmail.com>
     Nadège Michel <michel.nadege@gmail.com>
